# yt-music-cli

./: .gitignore  README.md  pyproject.toml
.superpowers/brainstorm/8708-1777840628/content/: architecture.html  auth-errors.html  dataflow.html  ui-layout.html
.superpowers/brainstorm/8708-1777840628/state/: server-stopped
docs/superpowers/plans/: 2026-05-03-yt-music-tui-plan.md
docs/superpowers/specs/: 2026-05-03-yt-music-tui-design.md
src/yt_music_cli/: api.py  app.py  auth.py  bus.py  config.py  events.py  models.py  player.py
src/yt_music_cli/ui/: art.py  home.py  keys.py  screens.py  widgets.py
tests/: conftest.py  test_api.py  test_auth.py  test_bus.py  test_events.py  test_models.py  test_player.py
tests/test_ui/: test_integration.py
